# projecoes-populacao-2024

./: .gitignore  Pirâmide etária do Brasil, 2010-2070.ipynb  README.md  process.py  pyproject.toml  run.py
