[project]
name = "projecoes-populacao-2024"
version = "0.1.0"
description = "Projecoes de populacao para o Brasil"
authors = [
    { name = "Daniel Komesu", email = "danielkomesu@gmail.com" }
]
dependencies = [
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "openpyxl>=3.1.5",
    "ipykernel>=6.29.5",
    "scipy>=1.14.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
